--- a/css/shapes.less
+++ b/css/shapes.less
@@ -1,6 +1,7 @@
 .circular(@size) {
+    display: block;
     width: @size;
     height: @size;
     .border-radius(@size / 2);
-     background: url(http://link-to-your/image.jpg) no-repeat;
+    background: url(http://link-to-your/image.jpg) no-repeat;
 }
