--- a/css/topics.less
+++ b/css/topics.less
@@ -2,8 +2,11 @@ section.topics {
     content {
         item {
             .column(4);
-            thumbnails {
-
+            thumbnail {
+                .circular(230px);
+                background-position: center;
+                background-repeat: no-repeat;
+                background-size: cover;
             }
         }
     }
